--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,29 +1,7 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .footer img {
   margin-left: 0.5rem;
@@ -35,84 +13,272 @@
   align-items: center;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  line-height: 1;
+  font-size: 7rem;
+  font-family: 'Shrikhand', cursive;
 }
 
-.title,
-.description {
-  text-align: center;
+
+.mainLeft h2 {
+  line-height: 1;
+  font-size: 2.5rem;
+  font-family: "Alata", sans-serif;
 }
 
-.description {
+.mainLeft p {
   line-height: 1.5;
   font-size: 1.5rem;
+  font-family: "Alata", sans-serif;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+
+.green {
+  background-color: #06d6a0;
 }
 
-.grid {
+.greenFaded {
+  background-color: #10F9BB;
+}
+
+
+.yellow {
+  background-color: #ffd166;
+}
+
+.yellowFaded {
+  background-color: #FFE099;
+}
+
+
+.blue {
+  background-color: #118ab2;
+}
+
+.blueFaded {
+  background-color: #15ADE0;
+}
+
+.pink {
+  background-color: #ef476f;
+}
+
+.pinkFaded {
+  background-color: #F47C98;
+}
+
+.darkgrey {
+  color: #565656;
+}
+
+/* CONTAINER */
+.container {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  flex-wrap: wrap;
-
-  max-width: 800px;
-  margin-top: 3rem;
+  align-items: center;
+  min-height: 100vh;
+  width: 100vw;
+  font-family: Alata;
+  color: white;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 50vw;
+  /* background-color: #06d6a0; */
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.navLeft {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 50vw;
+  flex-grow: 1;
 }
 
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.mainLeft {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 50vw;
 }
 
-.card p {
-  margin: 0;
+.mainLeft p {
+  margin-top: -10px;
+}
+
+.footerLeft {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-height: 100px;
+  height: 100px;
+  width: 100vw;
+  flex-grow: 1;
+  position: absolute;
+  bottom: 0;
+}
+
+.footerLeft p {
+  color: #565656;
+}
+
+
+/* >>>>> RIGHT */
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 50vw;
+  background-color: #10F9BB;
+}
+
+.navRight {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100px;
+  width: 50vw;
+  flex-grow: 1;
   font-size: 1.25rem;
-  line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
+.mainRight {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 50vw;
+}
+
+.footerRight {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-height: 100px;
+  height: 100px;
+  width: 50vw;
+  flex-grow: 1;
+  position: absolute;
+  bottom: 0;
+}
+
+.fas {
+  color: white;
+}
+
+.underline {
+    text-decoration: none;
+    display: inline-block;
+    padding: 15px 20px;
+    position: relative;
+}
+
+.underlineYellow:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #ffd166;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.underlineBlue:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #118ab2;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.underlinePink:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #ef476f;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.underlinePurple:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #846496;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+
+.underline:hover:after { 
+  width: 100%; 
+  left: 0; 
+}
+
+.img {
+  max-width: 80%;
+  max-height: 25px;
+}
+
+.heroImg {
+  max-width: 80%;
+}
+
+.medImg {
+  max-width: 100px;
+  margin: 10px 10px;
+}
+
+.profile {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile {
+  width: 80%;
+}
+
+.mainRight h1 {
+  margin-top: -20px;
+}
+
+.profile p {
+  margin-top: -20px;
 }
 
 @media (max-width: 600px) {
