--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,9 +5,8 @@
 .title {
   margin: 0;
   line-height: 0.75;
-  font-size: 15rem;
+  font-size: 10rem;
   font-weight: 400;
-  /* font-family: 'Shrikhand', cursive; */
   font-family: 'Raleway', sans-serif;
   font-family: 'Covered By Your Grace', cursive;
 }
@@ -164,7 +163,12 @@
 
 .mainRight h1 {
   font-family: 'Covered By Your Grace', cursive;
-  font-size: 5rem;
+  font-size: 4rem;
+  line-height: 0.025;
+}
+
+.mainRight h2 {
+  line-height: 0.25;
 }
 
 .footerRight {
@@ -256,7 +260,7 @@
 
 .medImg {
   max-width: 100px;
-  margin: 10px 10px;
+  margin: 0 15px 0 -10px;
 }
 
 .profile {
@@ -264,13 +268,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
-
-.profile {
   width: 80%;
   font-size: 1.5rem;
   font-size: medium;
-  font-size: larger;
 }
 
 .italiac {
@@ -278,11 +278,35 @@
 }
 
 .mainRight h1 {
-  margin-top: -20px;
+  margin-top: -10px;
 }
 
-.profile p {
-  margin-top: -20px;
+.flexRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.flexRow p {
+  line-height: 5px;
+  margin-bottom: 15px;
+}
+
+.flexStart {
+  justify-content: flex-start;
+  align-self: flex-start;
+}
+
+.scheduleText {
+  line-height: 16px;
+  line-height: 0.5;
+}
+
+
+.flexColumn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -375,6 +399,8 @@
   align-items: center;
   height: 100vh;
   width: 50vw;
+  min-width: 80%;
+  border: 1px solid black;
 }
 
 .footerRight {
