--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -354,7 +354,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100vh;
     width: 100vw;
   }
 
@@ -367,7 +367,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    max-height: 100px;
+    /* max-height: 100px; */
     height: 100px;
     width: 100vw;
     flex-grow: 1;
