feat(all pages): Centers text on early registration notice

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -86,6 +86,8 @@
   background-color: #2456b8;
   border-radius: 30px;
   animation: wiggle 4s infinite; 
+  text-align: center;
+  margin: 0 20px; 
 }
 /* 
 .notice:hover {
